--- a/coco/CMakeLists.txt
+++ b/coco/CMakeLists.txt
@@ -4,39 +4,58 @@ target_sources(${PROJECT_NAME}
 		InOut.hpp
 		Input.hpp
 		Output.hpp
+		Trigger.hpp
 	PRIVATE
 		InOut.cpp
 		Input.cpp
 		Output.cpp
+		Trigger.cpp
 )
 
 if(${PLATFORM} STREQUAL "native")
 	# native platform (Windows, MacOS, Linux)
 	target_sources(${PROJECT_NAME}
 		PUBLIC FILE_SET platform_headers TYPE HEADERS BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/native FILES
-			native/coco/platform/InOutOut.hpp
+			native/coco/platform/InOut_cout.hpp
+			native/coco/platform/Input_cout.hpp
+			native/coco/platform/Output_cout.hpp
+			native/coco/platform/Trigger_cout.hpp
 		PRIVATE
-			native/coco/platform/InOutOut.cpp
+			native/coco/platform/InOut_cout.cpp
+			native/coco/platform/Input_cout.cpp
+			native/coco/platform/Output_cout.cpp
+			native/coco/platform/Trigger_cout.cpp
 	)
 elseif(${PLATFORM} MATCHES "^nrf52")
 	target_sources(${PROJECT_NAME}
 		PUBLIC FILE_SET platform_headers TYPE HEADERS BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/nrf52 FILES
 			nrf52/coco/platform/InOut_GPIO.hpp
+			nrf52/coco/platform/Input_GPIO.hpp
+			nrf52/coco/platform/Output_GPIO.hpp
+			nrf52/coco/platform/Trigger_GPIOTE_RTC0.hpp
 		PRIVATE
 			nrf52/coco/platform/InOut_GPIO.cpp
+			nrf52/coco/platform/Input_GPIO.cpp
+			nrf52/coco/platform/Output_GPIO.cpp
+			nrf52/coco/platform/Trigger_GPIOTE_RTC0.cpp
 	)
 elseif(${PLATFORM} MATCHES "^stm32f0")
 	target_sources(${PROJECT_NAME}
 		PUBLIC FILE_SET platform_headers TYPE HEADERS BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/stm32f0 FILES
 			stm32f0/coco/platform/InOut_GPIO.hpp
+			stm32f0/coco/platform/Input_GPIO.hpp
+			stm32f0/coco/platform/Output_GPIO.hpp
+			stm32f0/coco/platform/Trigger_EXTI_TIM2.hpp
 		PRIVATE
 			stm32f0/coco/platform/InOut_GPIO.cpp
+			stm32f0/coco/platform/Input_GPIO.cpp
+			stm32f0/coco/platform/Output_GPIO.cpp
+			stm32f0/coco/platform/Trigger_EXTI_TIM2.cpp
 	)
 endif()
 
 target_link_libraries(${PROJECT_NAME}
 	coco::coco
-	coco-loop::coco-loop # for loop::now() in native
 )
 
 target_include_directories(${PROJECT_NAME}
