--- a/coco/CMakeLists.txt
+++ b/coco/CMakeLists.txt
@@ -56,6 +56,7 @@ endif()
 
 target_link_libraries(${PROJECT_NAME}
 	coco::coco
+	coco-loop::coco-loop
 )
 
 target_include_directories(${PROJECT_NAME}
